# notes-utils

./: Cargo.toml  README.md  archive.go  go.mod  go.sum  main.go  priority.md  validate.go
src/: lib.rs  main.rs
web/: manifest.json  package.json
web/browserAction/: index.css  index.html
web/options/: index.html
