[package]
name = "notes"
version = "0.1.0"
authors = ["EthanJustice <47954690+EthanJustice@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/EthanJustice/notes-utils"
repository = "https://github.com/EthanJustice/notes-utils"
license = "MIT"
publish = false

[dependencies]
clap = "~2.33.3"