[package]
name = "notes"
version = "0.1.0"
authors = ["EthanJustice <47954690+EthanJustice@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/EthanJustice/notes-utils"
repository = "https://github.com/EthanJustice/notes-utils"
license = "MIT"
publish = false

[dependencies]
# terminal
clap = "~2.33.3"
crossterm = "~0.17.7"

# fs
walkdir = "~2.3.1"

# markdown
pulldown-cmark = "~0.8.0"

# serialisation
serde = { version = "~1.0.117", features = ["derive"] }
serde_json = "~1.0.59"

# networking
reqwest = { version = "~0.10.8", features = ["blocking"] }

# concurrency
rayon = "~1.5.0"
